--- a/templates/authentication/login.html
+++ b/templates/authentication/login.html
@@ -1,7 +1,48 @@
-{% extends 'base_auth.html' %} {% block content %}
-<div class="card">
-  <div class="card-body">
-    <h1>Login</h1>
+{% extends 'base_auth.html' %} {% load static %} {% block content %}
+
+<div class="row">
+  <div class="col-md-4"></div>
+  <div class="col-md-4">
+    <div class="card mt-5">
+      <div class="card-body">
+        <div class="card-title py-3">
+          <h4>Register for a free account</h4>
+        </div>
+        <form action="{% url 'login' %}" method="post">
+          {% csrf_token %} {% include 'partials/_messages.html' %}
+          <div class="form-group my-2">
+            <input
+              type="text"
+              name="username"
+              placeholder="username"
+              id="usernameField"
+              class="form-control form-control-sm"
+              value="{{fieldValues.username}}"
+            />
+          </div>
+          <div
+            class="invalid_feedback invalid_feedback"
+            style="display: none"
+          ></div>
+          <div class="form-group my-2">
+            <input
+              type="password"
+              name="password"
+              placeholder="Password"
+              id="passwordField"
+              class="form-control form-control-sm"
+            />
+          </div>
+          <input
+            type="submit"
+            value="Login"
+            class="btn btn-block btn-primary submit-btn"
+          />
+        </form>
+      </div>
+    </div>
   </div>
+  <div class="col-md-4"></div>
 </div>
+<script src="{% static 'js/register.js' %}"></script>
 {% endblock content %}
