--- a/templates/expenses/index.html
+++ b/templates/expenses/index.html
@@ -1,17 +1,21 @@
 {% extends 'base.html' %} {% block content %}
-<h2>Expenses List</h2>
+<div class="container">
+  {% include 'partials/_messages.html' %}
 
-<ul class="list-group">
-  <li class="list-group-item">Bought Beer</li>
-  <li class="list-group-item">Bought Beer</li>
-  <li class="list-group-item">Bought Beer</li>
-  <li class="list-group-item">Bought Beer</li>
-  <li class="list-group-item">Bought Beer</li>
-  <li class="list-group-item">Bought Beer</li>
-  <li class="list-group-item">Bought Beer</li>
-  <li class="list-group-item">Bought Beer</li>
-  <li class="list-group-item">Bought Beer</li>
-  <li class="list-group-item">Bought Beer</li>
-  <li class="list-group-item">Bought Beer</li>
-</ul>
+  <h2>Expenses List</h2>
+
+  <ul class="list-group">
+    <li class="list-group-item">Bought Beer</li>
+    <li class="list-group-item">Bought Beer</li>
+    <li class="list-group-item">Bought Beer</li>
+    <li class="list-group-item">Bought Beer</li>
+    <li class="list-group-item">Bought Beer</li>
+    <li class="list-group-item">Bought Beer</li>
+    <li class="list-group-item">Bought Beer</li>
+    <li class="list-group-item">Bought Beer</li>
+    <li class="list-group-item">Bought Beer</li>
+    <li class="list-group-item">Bought Beer</li>
+    <li class="list-group-item">Bought Beer</li>
+  </ul>
+</div>
 {% endblock content %}
